--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI-CD Pipeline
+name: Frontend CI-CD Pipeline
 
 on:
   push:
@@ -6,70 +6,87 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy-frontend:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Setup Node.js
-        run: |
-          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-          sudo apt-get install -y nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: 14
 
       - name: Install Dependencies
         run: |
-          cd /TravelMemory/frontend
+          cd frontend
           npm install
-
-      - name: Lint and Fix
-        run: |
-          cd /TravelMemory/frontend
-          npm run lint -- --fix
 
       - name: Run Tests
         run: |
-          cd /TravelMemory/frontend
-          npm start
+          cd frontend
+          npm test
 
-  deploy:
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm run build
+
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_FRONTEND_HOST }}
+          username: ${{ secrets.EC2_FRONTEND_USERNAME }}
+          key: ${{ secrets.EC2_FRONTEND_SSH_KEY }}
+          port: 22
+          script: |
+            cd name: Frontend CI-CD Pipeline
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build-and-deploy-frontend:
     runs-on: ubuntu-latest
-
-    needs: build
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: SSH into EC2 and Prepare Target Directory
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 14
+
+      - name: Install Dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Run Tests
+        run: |
+          cd frontend
+          npm test
+
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm run build
+
+      - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.EC2_FRONTEND_HOST }}
+          username: ${{ secrets.EC2_FRONTEND_USERNAME }}
+          key: ${{ secrets.EC2_FRONTEND_SSH_KEY }}
           port: 22
           script: |
             cd /home/ubuntu/TravelMemory/frontend
             git pull origin main
-            npm install
+            # Additional deployment steps
 
-      - name: Copy Files to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          source: ./
-          target: /home/ubuntu/TravelMemory/frontend
-
-      - name: Restart Nginx
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          script: |
-            sudo systemctl restart nginx
+            git pull origin main
+            # Additional deployment steps
